--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
-			</div>
+				<p>a very happy birthday NAMITHA KRISHNA </p>
+				<P>LOVE YOU SOO MUCH MY DEAR</P>
+			</div> 
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
