--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-  
+	
+	 <div class="balloons text-center" id="b1">
+    	<h2 style="color:#20CFB4;">N</h2>
+    </div>
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">A</h2>
     </div>
@@ -102,30 +105,8 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Amyyyyy </p>
+				<p>Happy birthday to the love of my life! Every day with you is better than the last.. </p>
+				<p> Love you soo much my baby</p>
 				
 			</div> 
 		</div>
